<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ir.app.ensan.component.activity.SplashActivity"
    >

  <ir.app.ensan.component.view.CustomTextView
      android:id="@+id/splash_next_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/next"
      android:layout_alignParentLeft="true"
      android:layout_margin="16dp"
      android:textSize="16sp"
      android:textColor="@color/black"
      />

  <ir.app.ensan.component.view.CustomTextView
      android:id="@+id/splash_perv_text_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/perv"
      android:layout_alignParentRight="true"
      android:layout_margin="16dp"
      android:textSize="16sp"
      android:textColor="@color/black"
      />

  <android.support.v4.view.ViewPager
      android:id="@+id/splash_view_pager"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_marginBottom="16dp"
      android:layout_above="@+id/home_image_view"
      />

  <ImageView
      android:id="@+id/home_image_view"
      android:layout_width="match_parent"
      android:layout_height="330dp"
      android:layout_alignParentBottom="true"
      android:scaleType="fitXY"
      android:src="@drawable/home_splash"/>

  <ir.app.ensan.component.view.CustomButton
      android:id="@+id/enter_to_app"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_alignParentBottom="true"
      android:text="@string/enter_to_app"
      android:textColor="@color/white"
      android:background="@color/white_transparent"
      />

</RelativeLayout>
