<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contact_background"
    tools:context="ir.app.ensan.component.fragment.MainFragment"
    >

  <LinearLayout
      android:id="@+id/status_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="24dp"
      android:layout_marginRight="24dp"
      android:layout_marginTop="128dp"
      android:orientation="horizontal"
      >

    <LinearLayout
        android:id="@+id/in_danger_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >
      <ImageView
          android:id="@+id/danger_button"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:src="@drawable/hurt"
          android:layout_gravity="center"
          />

      <ir.app.ensan.component.view.CustomTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_marginTop="16dp"
          android:text="@string/damage"
          android:textSize="20sp"
          app:font_type="bold"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/safe_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

      <ImageView
          android:id="@+id/safe_button"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:src="@drawable/good"
          android:layout_gravity="center"
          />

      <ir.app.ensan.component.view.CustomTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_marginTop="16dp"
          android:text="@string/safe"
          android:textSize="20sp"
          app:font_type="bold"
          />
    </LinearLayout>
  </LinearLayout>

  <ImageView
      android:id="@+id/add_button"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:layout_below="@+id/status_container"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="64dp"
      android:src="@drawable/plus"
      />

  <ImageView
      android:id="@+id/eye_image_view"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="4dp"
      android:src="@drawable/ic_visibility"
      />

  <ir.app.ensan.component.view.CustomTextView
      android:id="@+id/main_title2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/sub_title2"
      android:layout_centerHorizontal="true"
      android:paddingTop="8dp"
      android:text="@string/add_guardian_main_title2"
      android:textColor="@color/white"
      android:textSize="16sp"
      />
  <ir.app.ensan.component.view.CustomTextView
      android:id="@+id/sub_title2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/eye_image_view"
      android:layout_centerHorizontal="true"
      android:paddingTop="8dp"
      android:text="@string/home_sub_title2"
      android:textColor="@color/white"
      android:textSize="10sp"
      />

</RelativeLayout>
